# house_kg_parser

./: .gitignore  LICENSE  Makefile  README.md  config.yaml  pyproject.toml
docs/: code_guide.md  house_kg_dataset.md
house_kg/: DATASET.md  __init__.py  cli.py  config.py  constants.py  export_hf.py  http_client.py  models.py  pipeline.py  scrape_mt.py  scrape_sample.py  storage.py  validate.py
house_kg/crawler/: __init__.py  entity_crawler.py  listing_crawler.py  pipeline.py  url_collector.py
house_kg/dataset/: __init__.py  card.py  hf_builder.py
house_kg/hf_dataset/: README.md
house_kg/hf_dataset/data/: companies.parquet  complexes.parquet  listings.parquet  photos.parquet  reviews.parquet  users.parquet
house_kg/logging_utils/: __init__.py  logger.py  progress.py
house_kg/parsers/: __init__.py  base.py  entity.py  listing.py  results.py  user.py
house_kg/utils/: __init__.py  dates.py  numbers.py  text.py
