[project]
name = "house-kg"
version = "1.0.0"
description = "Scraper and HuggingFace dataset builder for house.kg (Kyrgyzstan real estate)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    # scraping
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    # configuration
    "pyyaml>=6.0",
    # logging & progress
    "rich>=13.7",
    # dataset packaging
    "datasets>=2.19",
    "pyarrow>=15.0",
    "pillow>=10.0",
    "huggingface-hub>=0.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
house-kg = "house_kg.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["house_kg*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
